--- a/package.json
+++ b/package.json
@@ -1,36 +1,18 @@
 {
-  "name": "gen-art-starter-ab",
-  "version": "1.0.0",
-  "description": "A starter project for Artblocks projects",
-  "main": "src/sketch.js",
+  "name": "vite-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
-    "split": "node cram.js && split -b 10k dist/main.js dist/ab-main-"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lostPixels/gen-art-starter-ab.git"
-  },
-  "author": "James Merrill",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lostPixels/gen-art-starter-ab/issues"
-  },
-  "homepage": "https://github.com/lostPixels/gen-art-starter-ab#readme",
-  "dependencies": {
-    "clean-webpack-plugin": "^4.0.0",
-    "html-webpack-plugin": "^5.4.0",
-    "p5": "^1.5.0",
-    "replace-in-file": "^6.3.5"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^9.0.1",
-    "terser-webpack-plugin": "^5.3.3",
-    "webpack": "^5.58.2",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.3.1",
-    "webpack-merge": "^5.8.0"
+    "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "p5": "1.5.0",
+    "p5.js-svg": "^1.5.1"
   }
 }
